// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
        data-checked="false"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
        tabindex="0"
      >
        <div
          class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <div
            aria-disabled="false"
            class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_bnlb22a"
              id="_r_2_"
              name="test"
              tabindex="-1"
              type="radio"
              value="test"
            />
            <svg
              class="uv_bnlb22b"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_bnlb22e"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_bnlb22d"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_bnlb22c"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_2_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_s0xyv0b uv_mxir930 uv_mxir932d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1o893js0: 100%;"
        >
          Radio field
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
        tabindex="0"
      >
        <div
          class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <div
            aria-disabled="false"
            class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="uv_bnlb22a"
              id="_r_i_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_bnlb22b"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_bnlb22e"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_bnlb22d"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_bnlb22c"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_i_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_s0xyv0b uv_mxir930 uv_mxir932d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1o893js0: 100%;"
        >
          Radio field checked
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
        data-checked="false"
        data-disabled="true"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
      >
        <div
          class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <div
            aria-disabled="true"
            class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="true"
              class="uv_bnlb22a"
              disabled=""
              id="_r_a_"
              name="test"
              tabindex="-1"
              type="radio"
              value="disabled"
            />
            <svg
              class="uv_bnlb22b"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_bnlb22e"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_bnlb22d"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_bnlb22c"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_a_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_s0xyv0b uv_mxir930 uv_mxir932d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1o893js0: 100%;"
        >
          Radio field disabled
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
        data-checked="false"
        data-disabled="false"
        data-error="true"
        data-type="radio"
        role="button"
        style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
        tabindex="0"
      >
        <div
          class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <div
            aria-disabled="false"
            class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
            data-checked="false"
            data-invalid="true"
          >
            <input
              aria-disabled="false"
              class="uv_bnlb22a"
              id="_r_12_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_bnlb22b"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_bnlb22e"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_bnlb22d"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_bnlb22c"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_12_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_s0xyv0b uv_mxir930 uv_mxir932d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1o893js0: 100%;"
        >
          Radio field error
        </div>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
        tabindex="0"
      >
        <div
          class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <div
            aria-disabled="false"
            class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_bnlb22a"
              id="_r_q_"
              name="test"
              tabindex="-1"
              type="radio"
              value="events"
            />
            <svg
              class="uv_bnlb22b"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_bnlb22e"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_bnlb22d"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_bnlb22c"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_q_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_s0xyv0b uv_mxir930 uv_mxir932d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1o893js0: 100%;"
        >
          Radio field events
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
